modified the base

--- a/AutomationFramwork_10/test-output/old/Default suite/methods.html
+++ b/AutomationFramwork_10/test-output/old/Default suite/methods.html
@@ -1,18 +1,18 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="74bf60">  <td>25/02/01 10:05:00</td>   <td>0</td> <td title="&lt;&lt;BaseClass.reportBackup()[pri:0, instance:com.qspider.computers.TC_DWS010_Test@3bf7ca37]">&lt;&lt;reportBackup</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1554547125</td>   <td></td> </tr>
-<tr bgcolor="77d4a4">  <td>25/02/01 10:05:00</td>   <td>-135</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_DWS010_Test.clickOnComputer()[pri:0, instance:com.qspider.computers.TC_DWS010_Test@3bf7ca37]">clickOnComputer</td> 
+<tr bgcolor="77d4a4">  <td>25/02/01 11:55:17</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_DWS010_Test.clickOnComputer()[pri:0, instance:com.qspider.computers.TC_DWS010_Test@3bf7ca37]">clickOnComputer</td> 
   <td>main@1554547125</td>   <td></td> </tr>
-<tr bgcolor="74bf60">  <td>25/02/01 10:04:56</td>   <td>-4176</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.openBrwoser(java.lang.String)[pri:0, instance:com.qspider.computers.TC_DWS010_Test@3bf7ca37]">&gt;&gt;openBrwoser</td> 
+<tr bgcolor="74bf60">  <td>25/02/01 11:55:09</td>   <td>-8175</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.openBrwoser(java.lang.String)[pri:0, instance:com.qspider.computers.TC_DWS010_Test@3bf7ca37]">&gt;&gt;openBrwoser</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1554547125</td>   <td></td> </tr>
-<tr bgcolor="74bf60">  <td>25/02/01 10:05:00</td>   <td>-114</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.closeBrowser()[pri:0, instance:com.qspider.computers.TC_DWS010_Test@3bf7ca37]">&lt;&lt;closeBrowser</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td></td>   <td></td> </tr>
-<tr bgcolor="74bf60">  <td>25/02/01 10:05:00</td>   <td>-138</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.login()[pri:0, instance:com.qspider.computers.TC_DWS010_Test@3bf7ca37]">&gt;&gt;login</td> 
-<td>&nbsp;</td>  <td></td>   <td></td> </tr>
-<tr bgcolor="74bf60">  <td>25/02/01 10:04:56</td>   <td>-4737</td> <td title="&gt;&gt;BaseClass.configReport()[pri:0, instance:com.qspider.computers.TC_DWS010_Test@3bf7ca37]">&gt;&gt;configReport</td> 
+<tr bgcolor="74bf60">  <td>25/02/01 11:55:17</td>   <td>37</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.Logout()[pri:0, instance:com.qspider.computers.TC_DWS010_Test@3bf7ca37]">&lt;&lt;Logout</td> 
+<td>&nbsp;</td>  <td>main@1554547125</td>   <td></td> </tr>
+<tr bgcolor="74bf60">  <td>25/02/01 11:55:14</td>   <td>-2900</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.login()[pri:0, instance:com.qspider.computers.TC_DWS010_Test@3bf7ca37]">&gt;&gt;login</td> 
+<td>&nbsp;</td>  <td>main@1554547125</td>   <td></td> </tr>
+<tr bgcolor="74bf60">  <td>25/02/01 11:55:19</td>   <td>1375</td> <td title="&lt;&lt;BaseClass.reportBackup()[pri:0, instance:com.qspider.computers.TC_DWS010_Test@3bf7ca37]">&lt;&lt;reportBackup</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1554547125</td>   <td></td> </tr>
-<tr bgcolor="74bf60">  <td>25/02/01 10:05:00</td>   <td>-119</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.Logout()[pri:0, instance:com.qspider.computers.TC_DWS010_Test@3bf7ca37]">&lt;&lt;Logout</td> 
-<td>&nbsp;</td>  <td></td>   <td></td> </tr>
+<tr bgcolor="74bf60">  <td>25/02/01 11:55:09</td>   <td>-8693</td> <td title="&gt;&gt;BaseClass.configReport()[pri:0, instance:com.qspider.computers.TC_DWS010_Test@3bf7ca37]">&gt;&gt;configReport</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1554547125</td>   <td></td> </tr>
+<tr bgcolor="74bf60">  <td>25/02/01 11:55:18</td>   <td>1037</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.closeBrowser()[pri:0, instance:com.qspider.computers.TC_DWS010_Test@3bf7ca37]">&lt;&lt;closeBrowser</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1554547125</td>   <td></td> </tr>
 </table>
